--- a/top.html
+++ b/top.html
@@ -5,8 +5,20 @@
   <link rel="stylesheet"
   href="style.css">
   <title>Fair</title>
+
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 </head>
 <body>
-  
+  <!-- header -->
+  <div class="header">
+    <img src="img\sou.png" width="500px" height="500px">
+    <hr size="5" width="80%" color="black">
+  </div>
+
+  <div class="button">
+    <a href="#" class="btn-social-long-twitter">
+  <i class="fab fa-twitter">：連携</i>
+</a>
+  </div>
 </body>
 </html>
